<resources>
    <string name="app_name">FURNIVISION</string>
    <string name="furnivision">furnivision</string>
    <string name="furniture" />
    <string name="login">login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_an_account">
        Create an account
    </string>
    <string name="create_an_account_underlined">
        Create an account
    </string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">or</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="phone">Phone Number</string>
    <string name="name">Name</string>
    <string name="signup">Signup</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="design_desc">design</string>
    <string name="home">Home</string>
    <string name="cart_image_desc">cart button</string>
    <string name="home_image_desc">home button</string>
    <string name="shop_image_desc">shop button</string>
    <string name="ar_image_desc">augmented reality camera button</string>
    <string name="profile_image_desc">profile button</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="ar_camera">AR Camera</string>
    <string name="shop">Shop</string>
    <string name="furnivision_logo_desc">Furnivision logo</string>
    <string name="loading">Loading…</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="welcome">Welcome</string>
    <string name="search">Search</string>
    <string name="welcome_dashboard">Best Furniture For Your House</string>
    <string name="sofa_button">sofa button</string>
    <string name="bed_button">bed button</string>
    <string name="table_button">table button</string>
    <string name="lamp_button">lamp button</string>
    <string name="item">item</string>
    <string name="favorite_button">favorite button</string>
    <string name="proceed_button">proceed button</string>
    <string name="rate_icon">rate icon</string>
    <string name="sold_icon">sold icon</string>
    <string name="title_small">Furnivision</string>
    <string name="title_caps">FURNIVISION</string>
    <string name="empty"> </string>
    <string name="start_cd_1">Furniture Image 1</string>
    <string name="start_cd_2">Furniture Image 2</string>
    <string name="start_cd_3">Furniture Image 3</string>
    <string name="camera_title">  Furnivision  \nCamera</string>
    <string name="gallery_title">FurniVision\nGallery</string>
    <string name="furnivision_video">FurniVision\nVideo</string>
    <string name="back_button">back button</string>
    <string name="add_button">add button</string>
    <string name="furniture_selected">furniture selected</string>
    <string name="stock">Stocks:</string>
    <string name="colors">Colors:</string>
    <string name="dimensions">Dimensions:</string>
    <string name="price">Price:</string>
    <string name="description">Description:</string>
    <string name="name_title">Name:</string>
    <string name="sample">Sample</string>
    <string name="total">Total</string>
    <string name="dollar">$</string>
    <string name="check_out">check out</string>
    <string name="orders_title_page">Orders</string>
    <string name="sun_gold">Sun Gold</string>

    <string name="sample_text_8_words">Lorem ipsum dolor sit amet, consectetur.</string>
    <string name="content_desc_bg">background</string>
    <string name="content_desc_ship_add">shipping address</string>
    <string name="ship_method">ship_method</string>
    <string name="content_desc_pm">payment method</string>
    <string name="content_desc_pd">payment details</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="sample_address">Omega St., Apas, Cebu City</string>
    <string name="pick_up_option">Pick-up Option</string>
    <string name="shipping_method">Shipping Method</string>
    <string name="payment_method">Payment Method</string>
    <string name="select_a_method">Select a Method</string>
    <string name="merchandise_subtotal">Merchandise Subtotal</string>
    <string name="sample_merch_subtotal_value">₱ 20,000</string>
    <string name="product_protection_subtotal">Product Protection Subtotal</string>
    <string name="prod_protect_subtotal_value">1,500</string>
    <string name="shipping_subtotal">Shipping Subtotal</string>
    <string name="sample_shipping_subtotal_value">1,500</string>
    <string name="total_payment">Total Payment</string>
    <string name="sample_total_payment_value">₱ 23,000</string>
    <string name="place_order">Place Order</string>
    <string name="search_store">Search store</string>
    <string name="select_shops">Select Shops</string>
    <string name="shop_through_you_favorite_stores">Shop through you favorite stores.</string>
    <string name="next">next</string>
    <string name="furniture_image">Furniture Image</string>
    <string name="default_web_client_id">AIzaSyDWCkprg2H2rXRlVhNe4fwSu1k-3mxaWa0</string>
    <string name="pref_key">cartProducts_202</string>
    <string name="add_furnitures">add furnitures</string>
    <string name="lorem_ipsum_8">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="sample_price">##,###</string>
    <string name="deduct">deduct</string>
</resources>