<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="180dp"
    android:layout_height="130dp"
    android:layout_margin="10dp"
    app:contentPadding="10dp"
    android:elevation="10dp"
    app:cardCornerRadius="10sp"
    android:layout_marginEnd="15dp">

    <RelativeLayout
        android:id="@+id/popular_item1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/item_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerInside"
            android:layout_centerInParent="true"
            android:background="@drawable/white_background"
            android:contentDescription="@string/item"
            android:tag="furnitureImage" />

        <TextView
            android:id="@+id/item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="1sp"
            android:layout_marginHorizontal="5sp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_alignParentBottom="true">

            <ImageButton
                android:id="@+id/pop1_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:src="@drawable/ic_star_foreground"
                android:contentDescription="@string/rate_icon" />

            <TextView
                android:id="@+id/item_ratings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageButton
                android:id="@+id/pop1_cart"
                android:layout_width="28dp"
                android:layout_height="25dp"
                android:background="@color/white"
                android:src="@drawable/ic_yellow_cart_foreground"
                android:contentDescription="@string/sold_icon" />

            <TextView
                android:id="@+id/item_solds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <ImageButton
            android:id="@+id/pop1_open"
            android:tag="openButton"
            android:layout_width="31dp"
            android:layout_height="28dp"
            android:background="@drawable/circle_bg"
            android:src="@drawable/ic_right_foreground"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="5sp"
            android:contentDescription="@string/proceed_button" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>