<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/blue_sofa100"
    android:layout_width="180dp"
    android:layout_height="180dp"
    android:layout_marginEnd="1dp"
    android:layout_marginStart="20dp"
    android:layout_marginVertical="10dp"
    app:contentPadding="10dp"
    app:cardCornerRadius="10sp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/item_image"
            android:tag="furnitureImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="fitXY"
            android:background="@drawable/white_background"
            android:layout_centerInParent="true"
            android:contentDescription="@string/item" />

        <TextView
            android:id="@+id/item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_alignParentBottom="true">

            <ImageButton
                android:id="@+id/fav1_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:src="@drawable/ic_star_foreground"
                android:contentDescription="@string/rate_icon" />

            <TextView
                android:id="@+id/item_ratings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                />

            <ImageButton
                android:id="@+id/fav1_cart"
                android:layout_width="28dp"
                android:layout_height="25dp"
                android:background="@color/white"
                android:src="@drawable/ic_yellow_cart_foreground"
                android:contentDescription="@string/sold_icon" />

            <TextView
                android:id="@+id/item_solds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/item_link"
            android:tag="openButton"
            android:layout_width="31dp"
            android:layout_height="28dp"
            android:background="@drawable/circle_bg"
            android:src="@drawable/ic_right_foreground"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="5sp"
            android:contentDescription="@string/proceed_button" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>