<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="25dp"
        app:cardElevation="40dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="30dp"
            >
            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"

                />

            <ImageView
                android:id="@+id/furniture_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@id/checkbox"
                android:background="@color/light_gray"
                android:src="@drawable/chair2"
                android:contentDescription="@string/furniture_image"
                />


            <ImageButton
                android:id="@+id/add_furniture_btn"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_toStartOf="@id/count_textview"
                android:layout_centerVertical="true"
                android:background="@color/transparent"
                android:src="@drawable/add_furniture_icon"/>

            <TextView
                android:id="@+id/count_textview"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/deduct_furniture_btn"
                android:layout_centerVertical="true"
                android:text="0"
                android:textAlignment="center"
                android:textSize="20sp"
                android:fontFamily="@font/glacial_indifference_regular"
                />
            <ImageButton
                android:id="@+id/deduct_furniture_btn"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@color/transparent"
                android:src="@drawable/deduct_furniture_icon"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/cart_furniture_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/furniture_img"
                android:text="Sample"
                android:textAllCaps="true"
                android:fontFamily="@font/spartan_extrabold"
                android:textStyle="bold"

                />

            <TextView
                android:id="@+id/cart_furniture_desc"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/furniture_img"
                android:layout_below="@id/cart_furniture_name"
                android:text="@string/lorem_ipsum_8"
                android:textSize="10sp"
                android:fontFamily="@font/montserrat"

                />

            <TextView
                android:id="@+id/cart_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_toEndOf="@id/furniture_img"
                android:layout_alignBottom="@id/furniture_img"
                android:text="@string/dollar"
                android:textAllCaps="true"
                android:fontFamily="@font/spartan_medium"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/cart_furniture_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/cart_currency"
                android:layout_alignBottom="@id/cart_currency"
                android:text="@string/sample_price"
                android:textAllCaps="true"
                android:fontFamily="@font/spartan_medium"
                android:textStyle="bold"

                />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>