<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f4f4">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        >

        <ImageView
            android:layout_width="500dp"
            android:layout_height="300dp"
            android:scaleType="fitXY"
            android:src="@drawable/bg_blob2"
            android:scaleX="-1.7"
            android:scaleY="2"
            android:layout_marginTop="-260dp"
            android:layout_marginRight="-150dp"/>
        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="35dp"
            android:src="@drawable/furni_logo"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/montserrat"
            android:textSize="25sp"
            android:text="@string/cart"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:letterSpacing="0.2"
            />
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/menu_icon"
            android:scaleType="fitXY"
            android:layout_margin="20dp"
            />

    </RelativeLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:paddingHorizontal="40dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginVertical="120dp"
        app:cardBackgroundColor="@color/white"
        android:elevation="10dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="18dp"
            android:paddingHorizontal="30dp"
            >

            <TextView
                android:id="@+id/total_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/total"/>
            <TextView
                android:id="@+id/currency_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/total_textview"
                android:layout_marginVertical="2dp"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/dollar"
                />
            <TextView
                android:id="@+id/total_amount_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/currency_sign"
                android:layout_alignBottom="@id/currency_sign"
                android:layout_alignTop="@id/currency_sign"
                android:layout_below="@id/total_textview"
                android:layout_marginHorizontal="30dp"
                android:textSize="15sp"
                android:textColor="@color/primary"
                android:fontFamily="@font/montserrat"
                android:textStyle="bold"
                android:background="@color/white"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingHorizontal="25dp"
                android:background="@drawable/button_darker_style"
                android:drawableRight="@drawable/arrow_right_icon"
                android:fontFamily="@font/montserrat"
                android:text="@string/check_out"
                android:textColor="@color/white"
                android:textSize="15sp"
                />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>